examples/test/testpolicy8315.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8315
  namespace: namespace321
spec:
  podSelector:
    matchLabels:
      key20: value43
      key36: value41
      key14: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value5
          key45: value37
          key7: value39
      podSelector:
        matchLabels:
          key39: value8
          key10: value33
